# fythvm

./: .gitignore  AGENTS.md  Dockerfile  README.md  WARP.md  compose.yaml  pyproject.toml
.codex/skills/add-exploration-lab/: SKILL.md
docs/: compiler-mode-contract.md  deep-dive-and-priorities.md  dictionary-contract.md  execution-invariants.md  handler-requirements.md  word-family-contract.md  word-family-open-questions.md
docs/references/forth/: README.md  forth-implementation-alignment-report.md  miniforth.md  moving-forth-implementation-report.md  moving1.md  moving2.md  moving3.md  moving4.md  primitive-family-synthesis.md  primitive-stack-shape-synthesis.md
explorations/: BACKLOG.md  README.md
explorations/lab/_template/: README.md  lab.toml  run.py
explorations/lab/block-parameter-joins/: README.md  lab.toml  run.py
explorations/lab/cell-rpn-calculator/: README.md  lab.toml  run.py
explorations/lab/context-struct-stack-storage/: README.md  lab.toml  run.py
explorations/lab/ctypes-composite-runtime-layout/: README.md  lab.toml  run.py
explorations/lab/ctypes-dictionary-runtime/: README.md  lab.toml  run.py
explorations/lab/ctypes-struct-reification/: README.md  lab.toml  run.py
explorations/lab/delayed-ir-export-pattern/: README.md  lab.toml  run.py
explorations/lab/dictionary-linked-memory-layout/: README.md  lab.toml  run.py
explorations/lab/generated-layout-wrapper-convention/: README.md  _generated_layout.py  generate_layout.py  lab.toml  (+3 more)
scripts/: generate_dictionary_layout.py  inspect_dictionary_word_layout.py  render_llvm_graphs.py
src/fythvm/: __init__.py  rpn16.py
tests/: test_codegen.py  test_dictionary.py  test_dictionary_ir.py  test_exploration_runs.py  test_explorations.py  test_fythvm.py  test_llvmlite.py  test_rpn16.py
(+102 files in other folders)
